@@ -475,3 +475,4 @@ N(OP_GroupRoles),
 N(OP_SendFindableNPCs),
 N(OP_HideCorpse),
 N(OP_TargetBuffs),
+N(OP_TradeBusy),
