@@ -284,6 +284,7 @@ OP_TradeCoins=0x0000
 OP_FinishTrade=0x0000
 OP_CancelTrade=0x2dc1			# ShowEQ 10/27/05
 OP_TradeMoneyUpdate=0x0000		#not sure
+OP_TradeBusy=0x6839					#
 
 #merchant crap
 OP_ShopPlayerSell=0x0e13			# ShowEQ 10/27/05
