@@ -357,6 +357,7 @@ OP_FinishTrade=0x3ff6				# C
 OP_CancelTrade=0x527e				# C
 OP_TradeMoneyUpdate=0x7452			# C
 OP_MoneyUpdate=0x2d1d				# C
+OP_TradeBusy=0x0c2d					# V
 
 # Sent after canceling trade or after closing tradeskill object
 OP_FinishWindow=0x3c27				# C
