@@ -337,6 +337,7 @@ OP_FinishTrade=0x30B7 			#Trevius 03/09/09
 OP_CancelTrade=0x7A43			#Xinu 02/24/09
 OP_TradeMoneyUpdate=0x69E7
 OP_MoneyUpdate=0x305A
+OP_TradeBusy=0x5f49					#
 
 #Sent after canceling trade or after closing tradeskill object
 OP_FinishWindow=0x4919			#Trevius 03/15/09
