@@ -298,6 +298,7 @@ OP_TradeRequestAck=0x4048			# ShowEQ 10/27/05
 OP_TradeCoins=0x34c1		#guess...
 OP_FinishTrade=0x6014
 OP_CancelTrade=0x2dc1			# ShowEQ 10/27/05
+OP_TradeBusy=0x6839					#
 OP_TradeMoneyUpdate=0x0000		#not sure
 
 #merchant crap
