@@ -256,3 +256,4 @@
 	void Handle_OP_GuildBank(const EQApplicationPacket *app);
 	void Handle_OP_GroupRoles(const EQApplicationPacket *app);
 	void Handle_OP_HideCorpse(const EQApplicationPacket *app);
+	void Handle_OP_TradeBusy(const EQApplicationPacket *app);
